--- a/publish/package.json
+++ b/publish/package.json
@@ -5,7 +5,6 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
-    "bin/",
     "dist/src/",
     "src/",
     "LICENSE",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "lodash": "^4.17.21",
-    "hardhat": "^2.10.0"
+    "hardhat": "^2.10.0",
+    "json2md": "^2.0.0"
   }
 }
