--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlsl/hardhat-markup",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0-rc.4",
   "description": "Customizable markdown smart contracts documentation",
   "scripts": {
     "install": "npx husky install",
@@ -31,6 +31,9 @@
     "url": "https://github.com/dl-solidity-library/hardhat-markup/issues"
   },
   "homepage": "https://github.com/dl-solidity-library/hardhat-markup#readme",
+  "dependencies": {
+    "json2md": "^2.0.0"
+  },
   "peerDependencies": {
     "hardhat": "^2.10.0"
   },
@@ -40,7 +43,6 @@
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "ts-node": "^8.1.0",
-    "typescript": "~4.5.2",
-    "json2md": "^2.0.0"
+    "typescript": "~4.5.2"
   }
 }
