--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/dl-solidity-library/hardhat-markup#readme",
   "dependencies": {
     "json2md": "^2.0.0",
+    "prettier-plugin-solidity": "^1.1.3",
     "solidity-ast": "^0.4.49"
   },
   "peerDependencies": {
