--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "hardhat": "^2.10.0"
   },
   "devDependencies": {
+    "@types/prettier": "^2.7.2",
     "hardhat": "^2.10.0",
     "husky": "^7.0.2",
     "lodash": "^4.17.21",
-    "prettier": "^2.7.1",
     "ts-node": "^8.1.0",
     "typescript": "~4.5.2"
   }
