--- a/publish/package.json
+++ b/publish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlsl/hardhat-markup",
-  "version": "1.0.0-rc.7",
+  "version": "1.0.0-rc.8",
   "description": "Customizable markdown smart contracts documentation",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/dl-solidity-library/hardhat-markup#readme",
   "dependencies": {
-    "json2md": "^2.0.0"
+    "json2md": "^2.0.0",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solidity-ast": "^0.4.49"
   },
   "peerDependencies": {
     "hardhat": "^2.10.0"
