--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlsl/hardhat-markup",
-  "version": "1.0.0-rc.7",
+  "version": "1.0.0-rc.8",
   "description": "Customizable markdown smart contracts documentation",
   "scripts": {
     "install": "npx husky install",
@@ -32,16 +32,19 @@
   },
   "homepage": "https://github.com/dl-solidity-library/hardhat-markup#readme",
   "dependencies": {
-    "json2md": "^2.0.0"
+    "json2md": "^2.0.0",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solidity-ast": "^0.4.49"
   },
   "peerDependencies": {
     "hardhat": "^2.10.0"
   },
   "devDependencies": {
+    "@types/json2md": "^1.5.1",
+    "@types/prettier": "^2.7.2",
     "hardhat": "^2.10.0",
     "husky": "^7.0.2",
     "lodash": "^4.17.21",
-    "prettier": "^2.7.1",
     "ts-node": "^8.1.0",
     "typescript": "~4.5.2"
   }
