--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarity/hardhat-markup",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Customizable markdown smart contracts documentation",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -32,7 +32,9 @@
   },
   "homepage": "https://github.com/dl-solarity/hardhat-markup#readme",
   "scripts": {
-    "install": "npx husky install",
+    "postinstall": "npx husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "build": "tsc --build .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint-fix": "prettier --write \"./**/*.ts\" && prettier --write \"./**/*.js\"",
@@ -40,10 +42,10 @@
   },
   "dependencies": {
     "json2md": "2.0.0",
+    "lodash": "4.17.21",
     "prettier": "2.8.8",
     "prettier-plugin-solidity": "1.1.3",
-    "solidity-ast": "0.4.49",
-    "lodash": "4.17.21"
+    "solidity-ast": "0.4.49"
   },
   "peerDependencies": {
     "hardhat": "^2.10.0"
@@ -53,6 +55,7 @@
     "@types/prettier": "2.7.3",
     "hardhat": "^2.10.0",
     "husky": "^7.0.2",
+    "pinst": "^3.0.0",
     "ts-node": "^8.1.0",
     "typescript": "~4.5.2"
   }
