--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   "dependencies": {
     "json2md": "2.0.0",
     "lodash": "4.17.21",
-    "prettier": "^3.1.1",
-    "prettier-plugin-solidity": "^1.2.0",
+    "prettier": "3.1.1",
+    "prettier-plugin-solidity": "1.2.0",
     "solidity-ast": "0.4.49"
   },
   "peerDependencies": {
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@types/json2md": "^1.5.1",
-    "@types/prettier": "2.7.3",
+    "@types/prettier": "3.0.0",
     "hardhat": "^2.10.0",
     "husky": "^7.0.2",
     "pinst": "^3.0.0",
