--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
   "overrides": [
     {
-      "files": "*.ts",
+      "files": "[*.{js,ts}]",
       "options": {
         "printWidth": 120,
         "tabWidth": 2
