--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarity/hardhat-markup",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Customizable markdown smart contracts documentation",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/dl-solarity/hardhat-markup#readme",
   "scripts": {
-    "postinstall": "npx husky install",
+    "prepare": "npx husky",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
     "build": "tsc --build .",
@@ -41,22 +41,22 @@
     "publish-to-npm": "npm run build && npm run lint-fix && npm publish ./ --access public"
   },
   "dependencies": {
-    "json2md": "2.0.0",
+    "json2md": "2.0.1",
     "lodash": "4.17.21",
-    "prettier": "3.1.1",
-    "prettier-plugin-solidity": "1.2.0",
-    "solidity-ast": "0.4.49"
+    "prettier": "3.2.5",
+    "prettier-plugin-solidity": "1.3.1",
+    "solidity-ast": "0.4.55"
   },
   "peerDependencies": {
     "hardhat": "^2.10.0"
   },
   "devDependencies": {
-    "@types/json2md": "^1.5.1",
+    "@types/json2md": "^1.5.4",
     "@types/prettier": "3.0.0",
-    "hardhat": "^2.10.0",
-    "husky": "^7.0.2",
+    "hardhat": "2.20.1",
+    "husky": "^9.0.11",
     "pinst": "^3.0.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~4.5.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
